<resources>
    <string name="app_name">Fizykor</string>
    <string name="title_activity_equations">EquationsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kinematyka">Kinematyka</string>
    <string name="dynamika">Dynamika</string>
    <string name="praca_moc_energia">Praca, moc, energia</string>
    <string name="bry_a_szytywna">Bryła sztywna</string>
    <string name="termodynamika">Termodynamika</string>
    <string name="grawitacja_kosmos">Grawitacja, kosmos</string>
    <string name="ruch_drgaj_cy">Ruch drgający</string>
    <string name="fale_mechaniczne">Fale mechaniczne</string>
    <string name="elektrostatyka">Elektrostatyka</string>
    <string name="pr_d_sta_y">Prąd stały</string>
    <string name="magnetyzm">Magnetyzm</string>
    <string name="indukcja_elektromagnetyczna">Indukcja elektromagnetyczna</string>
    <string name="pr_d_przemienny_i_obwody">Prąd przemienny, obwody</string>
    <string name="optyka">Optyka</string>
    <string name="fizyka_wsp_czesna">Fizyka współczesna</string>
    <string name="rozdzia_y">Rozdziały</string>
    <string name="sta_e_fizyczne">Stałe fizyczne</string>
    <string name="przedrostki">Przedrostki</string>
    <string name="dodatkowo">Dodatkowo</string>
    <string name="info">Informacje</string>
    <string name="sta_e_i_przedrostki">Stałe i przedrostki</string>
    <string name="title_activity_flash_cards">FlashCardsActivity</string>
    <string name="tryb_maturalny">Tryb maturalny</string>
    <string name="podzi_kowania_dla_adama_i_zespo_u_beta_tester_w_w_razie_pyta_sugestii_prosz_o_kontakt_przez_komentarz_e_mail_tre_ci_b_d_progresywnie_rozwijane">Podziękowania dla Adama i zespołu Beta-testerów. W razie pytań, sugestii, proszę o kontakt przez komentarz/e-mail. Treści raczej nie będą progresywnie rozwijane, szkoda było mi zabić projekt, który był na sklepie juz przez dwa lata.</string>
    <string name="sprawd_swoj_wiedz_w_fiszkach">Sprawdź swoją wiedzę w fiszkach!</string>
    <string name="fiszki_to_tryb_stworzony_do_nauki_wzor_w_zawartych_w_zagadnieniach_tryb_fiszek_dla_okre_lonego_rozdzia_u_zawiera_wszystki_wzory_om_wione_w_rozdziale_aby_zmieni_fiszk_nale_y_przesun_c_palcem_po_ekranie_od_lewej_do_prawej_z_prawej_do_lewej_by_cofn_fiszk_aby_wy_wietli_schowa_fiszk_przytrzymaj_palcem_na_ekranie">Fiszki to tryb stworzony do nauki wzorów zawartych w zagadnieniach. Tryb Fiszek dla określonego rozdziału zawiera wszystki wzory omówione w rozdziale, aby zmienić fiszkę należy przesunąc palcem po ekranie od lewej do prawej, z prawej do lewej by cofnąć fiszkę, aby wyświetlić/schować fiszkę przytrzymaj palcem na ekranie.</string>
    <string name="fiszki_maturalne">Fiszki maturalne</string>
    <string name="fiszki">Fiszki</string>
    <string name="zagadnienia_zawarte_w_aplikacji_to_podstawy_teorii_fizyki_na_poziomie_maturalnym_opisane_wzorami_zagadnienienia_teoretyczne_b_d_progresywnie_poszerzane_w_kolejnych_aktualizacjach_aplikacji">Zagadnienia zawarte w aplikacji to podstawy teorii Fizyki na poziomie maturalnym opisane wzorami. Zagadnienienia teoretyczne będą progresywnie poszerzane w kolejnych aktualizacjach aplikacji.</string>
    <string name="clake_studio_2018">cLake Studio 2018</string>
    <string name="fizykor_v3_0">Fizykor v3.0</string>
    <string name="informacje">Informacje</string>
    <string name="clake">cLake</string>
    <string name="zagadnienia">Zagadnienia</string>
    <string name="tryb_fiszek_maturalnych_zawiera_te_wzory_kt_re_zosta_y_om_wione_w_rozdzia_ach_ale_nie_znajduj_si_na_karcie_wzor_w_cke_podczas_egzaminu_maturalnego_aby_zmieni_fiszk_nale_y_przesun_c_palcem_po_ekranie_od_lewej_do_prawej_aby_wy_wietli_schowa_fiszk_przytrzymaj_palcem_na_ekranie">Tryb Fiszek maturalnych zawiera te wzory, które zostały omówione w rozdziałach, ale nie znajdują się na karcie wzorów CKE podczas egzaminu maturalnego, aby zmienić fiszkę należy przesunąc palcem po ekranie od lewej do prawej, aby wyświetlić/schować fiszkę przytrzymaj palcem na ekranie.</string>
    <string name="sprawdz_swoja_wiedze_w_fiszkach">Sprawdź swoją wiedzę w fiszkach!</string>
    <string name="flashCards_navigation">Przesuń w prawo by wyświetlić nową fiszkę, przesuń w lewo by wyświetlic poprzednią, przytrzymaj aby wyświetlić odpowiedź</string>
    <string name="toast">toast</string>
</resources>
